# EnhancedGrangerCausalAnalysis

./: .gitignore  CONTRIBUTING.md  Changelog.md  LICENSE.md  PID_reg.ipynb  README.md  VISION.md  __init__.py  f1_myex4.csv  nf_myex4.csv  pyproject.toml  requirements-full.txt  requirements-tensorflow.txt  requirements-torch.txt  requirements.txt
api/: __init__.py  builder.py  config_loader.py  multitask_granger.py  orchestrator.py
backends/: __init__.py  backend_factory.py  base_backend.py  np_object_loader.py  pytorch_backend.py  scikit_backend.py  tensorflow_backend.py  tf_object_loader.py  torch_object_loader.py
callbacks/: convergence_check.py  early_stoppig.py  reduce_lr.py  tensorboard_logger.py
complex_granger_analysis/: __init__.py  granger_analisys_results.py  granger_analysis_results.py  lag_engine.py  utilits.py
components/: __init__.py
core/: __init__.py  exceptions.py  lag_config.py  outputs.py  protocols.py  training_config.py
docs/: anlysis_results.md  api_usage.md  backend_usage.md  components_loading.md  config_file_usage.md  data_preprocessing.md  project_structure.md  reference_loop.md  regularization_calibration.md  script_usage.md  test_group_config_usage.md
docs_old/: test_group_config_usage.md
example/: PID_fault2.csv  PID_reg.ipynb  PID_reg_new.ipynb  PID_reg_old.ipynb  group_config_user.json  group_relations_user.json  gt.csv  run_group_causality_tests_user.config.json
memories/: builder_usage.md  config_file_usage.md  group_config.json  pure_api_usage.md
results/: causality_matrix.py  granger_results.py  statistics.py
scripts/: data.csv  group_config.json  group_relations.json  run_group_causality_tests.config.json  run_group_causality_tests.py
tests/: group_config.json  test_backend_factory.py  test_builder_api.py  test_config_loader.py  test_constraints.py  test_custom_lags.py  test_granger_results.py  test_import_smoke_profiles.py  test_lag_override_examples.py  test_lag_selectors.py  test_orchestrator_callbacks.py  test_pytorch_backend_hyperopt.py  test_pytorch_model.py  test_regularizers.py  test_run_group_causality_tests.py  test_sklearn_model.py  test_stationarity_mech.py  test_tensorflow_model.py  (+3 more)
(+117 files in other folders)
